--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
     "@azure/identity": "^3.3.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0",
-    "readline-sync": "^1.4.10"
+    "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
+    "readline-sync": "^1.4.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
