--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@azure/identity": "^3.3.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@netlify/functions": "^2.6.0",
+    "@types/express": "^4.17.21",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "isomorphic-fetch": "^3.0.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "readline-sync": "^1.4.10",
+    "serverless-http": "^3.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
