--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "readline-sync": "^1.4.10",
     "serverless-http": "^3.2.0",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^5.11.8",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
