--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,8 @@
-[build]
-  command = "npm run build"  # Replace with your build command if applicable
-  functions = "functions"    # Assuming your functions are located in a directory named "functions"
-  publish = "public"         # Replace with your publish directory if applicable
-  # Specify the esbuild bundler and external node modules
-  node_bundler = "esbuild"
+[functions]
   external_node_modules = ["express"]
-[start]
-  command = "node index.js --port 8888"
-  
-[dev]
-  command = "node index.js --port 8888"  # Run your Node.js application directly
+  node_bundler = "esbuild"
+[[redirects]]
+  force = true
+  from = "/api/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
