--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "netlify dev"
   },
   "dependencies": {
+    "@azure/cosmos": "^4.0.0",
     "@azure/identity": "^3.3.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@netlify/functions": "^2.6.0",
@@ -11,7 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "isomorphic-fetch": "^3.0.0",
-    "mongoose": "^8.2.0",
+    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "readline-sync": "^1.4.10",
     "serverless-http": "^3.2.0",
