--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Deploy to staging
+name: Deploy to Staging
 
 on:
   push:
@@ -66,6 +66,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'api-suhradsportsclub-staging'
-          slot-name: 'Staging'
+          slot-name: 'Production'
           package: .
           
