--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.18.3",
+    "google-auth-library": "^9.7.0",
+    "googleapis": "^134.0.0",
     "isomorphic-fetch": "^3.0.0",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
